--- a/Injection/Injection.vcxproj
+++ b/Injection/Injection.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -30,27 +30,28 @@
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>MultiByte</CharacterSet>
     <UseOfAtl>Static</UseOfAtl>
+    <PlatformToolset>v140</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-iRO|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
-    <PlatformToolset>v100</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-bRO|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
-    <PlatformToolset>v100</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-jRO|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
-    <PlatformToolset>v100</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -70,23 +71,23 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>./;$(DXSDK_AUG07_DIR)Include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(DXSDK_AUG07_DIR)Lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>./;$(IncludePath);$(DXSDK_AUG07_DIR)Include</IncludePath>
+    <LibraryPath>$(LibraryPath);$(DXSDK_AUG07_DIR)Lib\x86</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-iRO|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>./;$(DXSDK_AUG07_DIR)Include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(DXSDK_AUG07_DIR)Lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>./;$(IncludePath);$(DXSDK_AUG07_DIR)Include</IncludePath>
+    <LibraryPath>$(LibraryPath);$(DXSDK_AUG07_DIR)Lib\x86</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-bRO|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>./;$(DXSDK_AUG07_DIR)Include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(DXSDK_AUG07_DIR)Lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>./;$(IncludePath);$(DXSDK_AUG07_DIR)Include</IncludePath>
+    <LibraryPath>$(LibraryPath);$(DXSDK_AUG07_DIR)Lib\x86</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-jRO|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>./;$(DXSDK_AUG07_DIR)Include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(DXSDK_AUG07_DIR)Lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>./;$(IncludePath);$(DXSDK_AUG07_DIR)Include</IncludePath>
+    <LibraryPath>$(LibraryPath);$(DXSDK_AUG07_DIR)Lib\x86</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
