--- a/Injection/Injection.vcxproj.filters
+++ b/Injection/Injection.vcxproj.filters
@@ -146,4 +146,7 @@
       <Filter>リソース ファイル</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
